--- a/ApiSimulation/Views/Partial/_AdminTemplate.cshtml
+++ b/ApiSimulation/Views/Partial/_AdminTemplate.cshtml
@@ -54,10 +54,10 @@
 
                     <div class="row">
                         <div class="col-md-8">
-                            <div class="form-group"><label>Url: </label><input class="form-control input-sm" data-bind="value: Url" type="text" placeholder="EndPoint giriniz.. ör: sport/live-score" required /></div>
+                            <div class="form-group"><label>Url: </label><input class="form-control input-sm" data-bind="value: Url" type="text" placeholder="EndPoint giriniz.. ör: sport/live-score" /></div>
                         </div>
                         <div class="col-md-2">
-                            <div class="form-group"><label>Category: </label><input class="form-control input-sm" data-bind="value: Category" type="text" placeholder="Kategori giriniz.." required /></div>
+                            <div class="form-group"><label>Category: </label><input class="form-control input-sm" data-bind="value: Category" type="text" placeholder="Kategori giriniz.." /></div>
                         </div>
                         <div class="col-sm-2 text-right">
 
@@ -93,7 +93,14 @@
             <div class="col-lg-12">
                 <pre data-bind="text: ContentRaw, click : { double: $root.EditDetail }"></pre>
             </div>
-            <div class="col-sm-3"><strong>Delay: </strong><span data-bind="text: Delay"></span></div>
+          <div class="col-sm-1">
+            <strong>Delay: </strong>
+            <span data-bind="text: Delay"></span>
+          </div>
+          <div class="col-sm-2"><strong>Template Engine: </strong>
+            <i class="fa fa-minus-circle text-danger" data-bind="visible: !UseTemplateEngine()"></i>
+            <i class="fa fa-check-circle-o text-success" data-bind="visible: UseTemplateEngine()"></i>
+          </div>
             <div class="col-md-5"><strong>Content Type: </strong><span data-bind="text: ContentType"></span></div>
             <div class="col-sm-3"><strong>Hit: </strong><span data-bind="text: Hit"></span></div>
             <div class="col-md-1 text-right">
@@ -125,11 +132,26 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="form-group">
-                    <textarea class="form-control" data-bind="value: ContentRaw" rows="10" required placeholder="Content..."></textarea>
+                    <textarea class="form-control" data-bind="value: ContentRaw" rows="10"  placeholder="Content..."></textarea>
                 </div>
             </div>
-            <div class="col-sm-3"><div class="form-group"><label>Delay: </label><input class="form-control input-sm" data-bind="value: Delay" type="number" required /></div></div>
-            <div class="col-md-4"><div class="form-group"><label>Content Type: </label><select class="form-control input-sm" data-bind="options: Commons.Constants.ContentTypeConstant.AllowedContentTypes, value: ContentType, optionsCaption:'Seçiniz...'" required></select></div></div>
+          <div class="col-sm-1">
+            <div class="form-group">
+              <label>Delay: </label>
+              <input class="form-control input-sm" data-bind="value: Delay" type="number" />
+            </div>
+          </div>
+          <div class="col-sm-2">
+            <div class="form-group">
+              <label>Template Engine: </label>
+              <label class="form-control input-sm" data-bind="css: { 'green-bg': UseTemplateEngine(), 'red-bg': !UseTemplateEngine() }"> 
+              <input data-bind="checked: UseTemplateEngine" type="checkbox" />
+                Use
+              </label>
+            </div>
+          </div>
+            
+            <div class="col-md-4"><div class="form-group"><label>Content Type: </label><select class="form-control input-sm" data-bind="options: Commons.Constants.ContentTypeConstant.AllowedContentTypes, value: ContentType, optionsCaption:'Seçiniz...'" ></select></div></div>
             <div class="col-md-3"><div class="form-group"><label>Base64 Converter: </label><input class="form-control" type="file" accept="image/*,application/pdf" data-bind="event: { change: function() { viewModel.SelectFile($data, $element.files[0]) } }" /></div></div>
             <div class="col-sm-2 text-right">
                 <div class="form-group">
