--- a/ApiSimulation/Views/Admin/LogDetail.cshtml
+++ b/ApiSimulation/Views/Admin/LogDetail.cshtml
@@ -1,38 +1,74 @@
-﻿@model System.Collections.Generic.List<ApiSimulation.Models.DTO.RequestLog>
+﻿@model List<ApiSimulation.Models.DTO.RequestLog>
 
-    <html>
-    <head>
-        <title>Request Log Detail</title>
-    </head>
-    <body style="font-family:Arial, Helvetica, sans-serif">
-        @if(Model.Count == 0)
-        {
+<html>
+<head>
+    <title>Request Log Detail</title>
+
+    <script>
+            window.onload = function ()
+            {
+                @if(ViewBag.Reload)
+                {
+                    <text>
+                       setTimeout(function () { window.location.reload(false); }, 3000);
+                    </text>
+                }
+            }
+
+            function onChange()
+            {
+                window.location.href = "?responseId=@(ViewBag.ResponseId)&reload=@(!ViewBag.Reload)";
+            }
+
+    </script>
+</head>
+<body style="font-family:Arial, Helvetica, sans-serif">
+    <label>
+        <input type="checkbox" id="cbx-live" onchange="onChange()" @(ViewBag.Reload ? "checked='checked'" : "") />
+        Canlı
+    </label>
+    <hr />
+
+
+    @if (Model.Count == 0)
+    {
         <text>
             Kayıt Bulunamadı.
         </text>
-        }
-        else
+    }
+    else
+    {
+
+        foreach (var item in Model)
         {
 
-        foreach(var item in Model)
-        {
-        <text>
-            <div>
+            if (ViewBag.Reload)
+            {
+                <text>
+                    <div>
+                        <p><strong>[@item.ID] [@item.RequestDate.ToString("dd.MM.yyyy HH:mm:ss")] </strong> @item.RequestRaw</p>
+                    </div>
+                </text>
+            }
+            else
+            {
+                <text>
+                    <div>
+                        <p><strong>Record ID: </strong>@item.ID</p>
+                        <p><strong>Request IP: </strong>@item.RequestIP</p>
+                        <p><strong>Request Date: </strong>@item.RequestDate.ToString("dd.MM.yyyy HH:mm:ss")</p>
+                        <p><strong>Request User Agent: </strong>@item.RequestUserAgent</p>
+                        <p><strong>Request Method: </strong>@item.RequestMethod</p>
+                        <p><strong>Request Header: </strong><br />@item.RequestHeader</p>
+                        <p><strong>Request Raw: </strong><br />@item.RequestRaw</p>
 
-                <p><strong>Request IP: </strong>@item.RequestIP</p>
-                <p><strong>Request Date: </strong>@item.RequestDate.ToString("dd.MM.yyyy HH:mm:ss")</p>
-                <p><strong>Request User Agent: </strong>@item.RequestUserAgent</p>
-                <p><strong>Request Method: </strong>@item.RequestMethod</p>
-                <p><strong>Request Header: </strong><br />@item.RequestHeader</p>
-                <p><strong>Request Raw: </strong><br />@item.RequestRaw</p>
-
-                <hr />
-            </div>
-
-        </text>
+                        <hr />
+                    </div>
+                </text>
+            }
         }
 
 
-        }
-    </body>
+    }
+</body>
 </html>
