--- a/ApiSimulation/Views/Partial/_AdminTemplate.cshtml
+++ b/ApiSimulation/Views/Partial/_AdminTemplate.cshtml
@@ -90,6 +90,28 @@
 <script type="text/html" id="response-detail-template">
     <div data-bind="if: !IsEditing()">
         <div class="row">
+
+            <div class="col-lg-12 text-right">
+
+                <div class="form-group">
+
+                    <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i>
+
+                    <button class="btn btn-info btn-xs" type="button" data-toggle="tooltip" title="Düzenle" data-bind="click: $root.EditDetail">
+                        <i class="fa fa-pencil"></i>
+                    </button>
+
+                    <button class="btn btn-danger btn-xs" type="button" data-toggle="dropdown" title="Sil">
+                        <i class="fa fa-close"></i>
+                    </button>
+                    <ul class="dropdown-menu pull-right">
+                        <li><a href="javascript:void(0)" data-bind="event: { click: function() { $root.DeleteDetail($parent,$data) } }"><i class="fa fa-close"></i> İçeriği Sil</a></li>
+                    </ul>
+
+
+                </div>
+            </div>
+
             <div class="col-lg-12">
                 <pre data-bind="text: ContentRaw, click : { double: $root.EditDetail }"></pre>
             </div>
@@ -130,9 +152,23 @@
     </div>
     <div data-bind="if: IsEditing()">
         <div class="row">
+            <div class="col-lg-12 text-right">
+                <div class="form-group">
+
+                    <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i>
+
+                    <button class="btn btn-success btn-xs" type="button" data-toggle="tooltip" title="Kaydet" data-bind="click: $root.SaveDetail">
+                        <i class="fa fa-check"></i>
+                    </button>
+
+                    <button class="btn btn-danger btn-xs" type="button" data-toggle="tooltip" title="İptal" data-bind="event: { click: function() { $root.CancelDetail($parent,$data) } }">
+                        <i class="fa fa-close"></i>
+                    </button>
+                </div>
+            </div>
             <div class="col-lg-12">
                 <div class="form-group">
-                    <textarea class="form-control" data-bind="value: ContentRaw" rows="10"  placeholder="Content..."></textarea>
+                    <textarea onkeyup="TextAreaChangeSize(this)" class="form-control" data-bind="value: ContentRaw" rows="10"  placeholder="Content..."></textarea>
                 </div>
             </div>
           <div class="col-sm-1">
